fixed heading jumps

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,7 +38,7 @@ disabled:bg-white disabled:hover:border-gray-300 disabled:hover:bg-white disable
 }
 
 .confession-text{
-	@apply w-full min-h-[18rem] h4 bg-white rounded-lg mb-10 sm:mb-0 py-6 px-10 flex flex-col justify-center order-first sm:order-none 
+	@apply w-full min-h-[30rem] md:min-h-[23rem] lg:min-h-[18rem] h4 bg-white rounded-lg mb-10 sm:mb-0 py-6 px-10 flex flex-col justify-center order-first sm:order-none 
 }
 
 .layout-empty{
